# gnome-ext-hanabi

./: .gitignore  .gitmodules  README.md  meson.build  meson_options.txt  run-config.sh.in  run.sh  todo
build-aux/: install-scene-native.sh
docs/: gstcefsrc-evaluation.md  scripting.md
docs/scripts/: random-wallpaper.py
native/scene/: CMakeLists.txt  hanabi-scene-dmabuf-texture.h  hanabi-scene-paintable.cpp  hanabi-scene-paintable.h  hanabi-scene-widget.cpp  hanabi-scene-widget.h
src/: autoPause.js  build-gstcefsrc-subproject.sh.in  buildConfig.js.in  dbus.js  download-gstcefsrc-cef.cmake.in  extension.js  install-gstcefsrc-artifacts.sh.in  launcher.js  meson.build  panelMenu.js  playbackState.js  prefs.js  project.js  wallpaper.js  windowManager.js
src/common/: gpuPipelineEnv.js  gpuPipelinePolicy.js  mpris.js  projectLoader.js
src/native/scene/: CMakeLists.txt  hanabi-scene-dmabuf-texture.cpp  hanabi-scene-gpu-policy.cpp  hanabi-scene-gpu-policy.hpp  hanabi-scene-paintable.cpp  hanabi-scene-paintable.h  hanabi-scene-project.hpp  hanabi-scene-widget.cpp  hanabi-scene-widget.h  meson.build
src/native/wpe/: CMakeLists.txt  hanabi-wpe-dmabuf-texture.c  hanabi-wpe-dmabuf-texture.h  hanabi-wpe-paintable.c  hanabi-wpe-paintable.h  meson.build
src/po/: LINGUAS  az.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fa.po  fi.po  fr.po  hanabi-extension@jeffshee.github.io.pot  hr.po  hu.po  id.po  it.po  ja.po  nb_NO.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sv.po  ta.po  th.po  tr.po  zh_CN.po  zh_Hans.po  zh_Hant.po  zh_TW.po
src/prefs/: main.js  projectBrowser.js  rows.js
src/renderer/: backends.js  nativeRuntimeConfig.js.in  renderer.js
src/renderer/backend/: base.js  common.js  scene.js  video.js  web.js  webGstCef.js
src/schemas/: io.github.jeffshee.hanabi-extension.gschema.xml
src/shell/integration/: autoPause.js  gnomeShellOverride.js  roundedCornersEffect.js  windowManager.js
src/shell/services/: dbus.js  launcher.js  playbackState.js  rendererManager.js  settingsBindings.js
src/shell/ui/: panelMenu.js  wallpaper.js
